--- a/assets/css/editor-preview.css
+++ b/assets/css/editor-preview.css
@@ -301,7 +301,8 @@ html.builder-html {
   background-color: #fff;
   text-align: center;
   color: #2d2d2d;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2); }
+  -webkit-box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2); }
   .builder-editor-active .builder-sortable-helper .icon {
     font-size: 28px;
     padding-top: 15px;
@@ -363,9 +364,11 @@ html.builder-html {
     cursor: pointer; }
     .builder-editor-active #builder-add-new-section .builder-button:hover {
       opacity: 0.85;
-      box-shadow: 0 0 2px rgba(0, 0, 0, 0.12), 0 2px 2px rgba(0, 0, 0, 0.2); }
+      -webkit-box-shadow: 0 0 2px rgba(0, 0, 0, 0.12), 0 2px 2px rgba(0, 0, 0, 0.2);
+              box-shadow: 0 0 2px rgba(0, 0, 0, 0.12), 0 2px 2px rgba(0, 0, 0, 0.2); }
     .builder-editor-active #builder-add-new-section .builder-button:active {
-      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.1); }
+      -webkit-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.1);
+              box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.1); }
 .builder-editor-active #builder-add-section-button {
   background-color: #0085ba; }
 .builder-editor-active #builder-add-template-button {
